kubernetes/production/apps/observability/kuma/app/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma-ingress
  annotations:
    kubernetes.io/ingress.class: traefik-external
    # external-dns.alpha.kubernetes.io/hostname: uptime-kumaxyz.${SECRET_CLUSTER_LOCAL_DOMAIN}
    external-dns.alpha.kubernetes.io/hostname: uptime-kumaqqq.${SECRET_CLUSTER_LOCAL_DOMAIN}
    external-dns.alpha.kubernetes.io/target: traefikqqq.${SECRET_CLUSTER_LOCAL_DOMAIN}
    external-dns.alpha.kubernetes.io/owner-id: main
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`uptime-kumaqqq.${SECRET_CLUSTER_LOCAL_DOMAIN}`)
      kind: Rule
      services:
        - name: uptime-kuma-service
          port: 3001
  tls:
    secretName: local-production-tls
